feat: add view shop modal and edit collection option
